feat: Remove 'strong' tags from some elements

--- a/chickpea-curry.html
+++ b/chickpea-curry.html
@@ -17,7 +17,7 @@
             It works well as a main course or a simple side dish.</p>
 
         <h2>Igredients</h2>
-        <h3><strong>For the paste</strong></h3>
+        <h3>For the paste</h3>
         <ul>
             <li>Thumb-sized piece gincer, peeled                            </li>
             <li>1 onion, diced                                              </li>
@@ -30,7 +30,7 @@
             <li>9 garlic cloves (aprox 1 small bulb of garlic)              </li>
         </ul>
 
-        <h3><strong>For the curry</strong></h3>
+        <h3>For the curry</h3>
         <ul>
             <li>2 x 400g cans chickpeas, drained                            </li>
             <li>1/2 small pack coriander, chopped, plus extra to garnish    </li>
@@ -39,7 +39,7 @@
             <li>100g spinach                                                </li>
         </ul>
 
-        <h3><strong>To serve</strong></h3>
+        <h3>To serve</h3>
         <ul>
             <li>Cooked rice and/or dahl                                     </li>
         </ul>
