feat: Create marmalade-ginger-star-anise-baked-ham.html and link it to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./chickpea-curry.html">Chickpea Curry</a>
+        <ul>
+            <li><a href="./chickpea-curry.html">Chickpea Curry</a></li>
+            <li><a href="./marmalade-ginger-star-anise-baked-ham.html">Marmalade, ginger star & anise baked ham</a></li>
+            <li></li>
+        </ul>
     </body>
 </html>
