feat: Create christmas-cookies.html and link it to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
 
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="./chickpea-curry.html">Chickpea Curry</a></li>
             <li><a href="./marmalade-ginger-star-anise-baked-ham.html">Marmalade, ginger star & anise baked ham</a></li>
-            <li></li>
+            <li><a href="./christmas-cookies.html">Christmas cookies</a></li>
         </ul>
     </body>
 </html>
