Style the main page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./chickpea-curry.html">Chickpea Curry</a></li>
-            <li><a href="./marmalade-ginger-star-anise-baked-ham.html">Marmalade, ginger star & anise baked ham</a></li>
-            <li><a href="./christmas-cookies.html">Christmas cookies</a></li>
-        </ul>
+        <div class="header">
+            <div class="logo">- Odin Recipes -</div>
+        </div>
+        <div class="block-1">
+                <div class="recipes">
+                    <div class="title">- Chickpea curry -</div>
+                    <div class="image"><a href="./chickpea-curry.html"><img src="./images/kadala-curry-fad4df3.jpg" alt=""></a></div>
+                    <div class="description">This easy chickpea curry, created by reader <strong>Jon Gregg</strong>, 
+                        is a vegan recipe that's three of your five-a-day. 
+                        It works well as a main course or a simple side dish.</div>
+                </div>
+                <div class="recipes" id="recipe-2">
+                    <div class="title">- Marmalade ginger star anise baked ham -</div>
+                    <div class="image"><a href="./marmalade-ginger-star-anise-baked-ham.html"><img src="./images/marmalade-ginger-star-anise-ham-fc3b052.jpeg" alt=""></a></div>
+                    <div class="description">Bake a gammon joint with a marmalade, ginger and star 
+                        anise glaze for a centrepiece main course. 
+                        It's ideal at Christmas time or for Sunday lunch.</div>
+                </div>
+                <div class="recipes">
+                    <div class="title">- Christmas cookies -</div>
+                    <div class="image"><a href="./christmas-cookies.html"><img src="./images/Christmas-cookies-b191c20.jpeg" alt=""></a></div>
+                    <div class="description">These festive vanilla cookies make a beautiful edible Christmas 
+                        tree decoration. Or, you could pack them into boxes to give as 
+                        end-of-term gifts for teachers and friends.</div>
+                </div>
+        </div>    
+        <div class="footer">
+            <div class="copyright">- Copyright © Leonardo Di Giorgio 2022 -</div>
+        </div>
     </body>
 </html>
